Addeded some StringTasks tests + Cleanup